# jmx-to-scenario

./: .gitignore  CLAUDE.md  PLAN.md  PT_SCENARIO_RULES.md  README.md  SPEC.md  TEST_KONWERSJI.md  pyproject.toml
scripts/: compare_jmx.py
src/jmx_to_scenario/: __init__.py  cli.py  exceptions.py
src/jmx_to_scenario/core/: __init__.py  data_types.py  jmx_parser.py  scenario_builder.py  yaml_writer.py
src/jmx_to_scenario/core/converters/: __init__.py  groovy_converter.py  helpers.py
tests/: __init__.py  conftest.py  test_cli.py  test_jmx_parser.py
